--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ pluggy==1.5.0
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 pytz==2025.1
+setuptools==68.1.2
+setuptools-scm==8.0.4
 six==1.17.0
 tzdata==2025.1
 XlsxWriter==3.2.2
